[package]
name = "patchv380"
version = "0.1.1"
authors = ["bcaller <bcaller@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.3.4"
clap = "2"
md-5 = "0.8.0"
tempfile = "3.1.0"

[profile.release]
opt-level = 'z'  # Optimize for size.
lto = true
panic = 'abort'
codegen-units = 1
